--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         }
       }
     </script>
-    <link rel="stylesheet" href="./css/style.css" />
+    <link rel="stylesheet" href="./style.css" />
   </head>
   <body class="bg-gray-50 text-gray-900 font-sans">
     <a href="#main" class="sr-only focus:not-sr-only focus:fixed focus:top-2 focus:left-2 focus:bg-white focus:text-brand-blue focus:px-3 focus:py-2 focus:rounded-md focus:shadow">Skip to content</a>
