Update logo image source in index.html

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       <div class="mx-auto max-w-7xl px-4 sm:px-6 lg:px-8">
         <div class="h-16 flex items-center justify-between">
           <a href="#home" class="flex items-center gap-2">
-            <img src="./assets/logo.svg" alt="ABC Chemical logo" class="h-8 w-8 rounded-lg" />
+            <img src="./logo.svg" ... />
             <span class="text-lg sm:text-xl font-extrabold tracking-tight">
               <span class="text-brand-blue">ABC</span> Chemical
             </span>
