--- a/index.html
+++ b/index.html
@@ -347,7 +347,7 @@
       <div class="mx-auto max-w-7xl px-4 sm:px-6 lg:px-8 py-10 border-t border-gray-200">
         <div class="flex flex-col sm:flex-row items-center justify-between gap-6">
           <div class="flex items-center gap-2">
-            <img src="./assets/logo.svg" alt="" class="h-6 w-6 rounded-md" />
+            <img src="./logo.svg" ... />
             <span class="font-semibold">ABC Chemical Co., Ltd.</span>
           </div>
           <nav class="flex items-center gap-6 text-sm">
